# mkcmd

./: README.md  __init__.py  pyproject.toml
src/mkcmd/: __init__.py  __main__.py  cli.py
src/mkcmd/template/prj/: {{__target__}}
template/prj/: {{__target__}}
