[project]
name = "mkcmd"
version = "0.1.0"
description = "Creates python command file"
readme = "README.md"
authors = [
    { name = "Khan Kibria", email = "khan.kibria@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "prj-gen",
]

[project.scripts]
mkcmd = "mkcmd.cli:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
prj-gen = { git = "https://github.com/kkibria/prj-gen.git" }
